--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,11 @@
     <meta name="theme-color" content="#000000"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="Web site created using create-react-app"/>
-    <title>About me</title>
+    <title>ADILET OFFICIAL WEBSITE</title>
+<!--    <link rel="icon" href="./src/assets/img/favicon.ico" type="image/x-icon">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="../src/components/styles/styles.scss">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
